WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164756
Scrolling when zoomed doesn't always use the correct layout viewport
https://bugs.webkit.org/show_bug.cgi?id=164756
Summary
Scrolling when zoomed doesn't always use the correct layout viewport
Simon Fraser (smfr)
Reported
2016-11-14 17:33:06 PST
Scrolling when zoomed doesn't always use the correct layout viewport
Attachments
Patch
(3.97 KB, patch)
2016-11-14 17:47 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-11-14 17:47:17 PST
Created
attachment 294787
[details]
Patch
Dean Jackson
Comment 2
2016-11-14 17:48:53 PST
Comment on
attachment 294787
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=294787&action=review
> Source/WebCore/page/scrolling/mac/ScrollingTreeFrameScrollingNodeMac.mm:407 > - setScrollLayerPosition(scrollPosition, layoutViewport); > + setScrollLayerPosition(scrollPosition, layoutViewport());
What?
WebKit Commit Bot
Comment 3
2016-11-14 18:19:30 PST
Comment on
attachment 294787
[details]
Patch Clearing flags on attachment: 294787 Committed
r208722
: <
http://trac.webkit.org/changeset/208722
>
WebKit Commit Bot
Comment 4
2016-11-14 18:19:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug