Source/WebCore/page/scrolling/ScrollingTreeFrameScrollingNode.h
@@ -70,11 +70,13 @@ protected:
     float topContentInset() const { return m_topContentInset; }
 
     FloatRect layoutViewport() const { return m_layoutViewport; };
+    void setLayoutViewport(const FloatRect& r) { m_layoutViewport = r; };
+
     FloatPoint minLayoutViewportOrigin() const { return m_minLayoutViewportOrigin; }
     FloatPoint maxLayoutViewportOrigin() const { return m_maxLayoutViewportOrigin; }
 
     ScrollBehaviorForFixedElements scrollBehaviorForFixedElements() const { return m_behaviorForFixed; }
-    
+
 private:
     void dumpProperties(TextStream&, ScrollingStateTreeAsTextBehavior) const override;
 
